--- a/trabGrafos_gustavo_mateus_final.ipynb
+++ b/trabGrafos_gustavo_mateus_final.ipynb
@@ -5,12 +5,7 @@
     "colab": {
       "name": "trabGrafos_gustavo_mateus_final.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "lkO5BPkAldQp",
-        "T1WuOvCy1x2Y",
-        "CUPHO8qE1-6F",
-        "wkH9baue2IUX"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,8 +320,9 @@
       },
       "source": [
         "def percurso_profundidade(G, vert_inicial):\n",
-        "    # edges é a lista onde será salvo os vertices na sequencia em que a busca em profundidade\n",
-        "    # percorre o grafo G, a partir do vertice inicial representado pela var vert_inicial\n",
+        "    # edges é a lista onde será salvo os vertices na sequencia em que a \n",
+        "    # busca em profundidade percorre o grafo G, a partir do vertice \n",
+        "    # inicial, representado pela var vert_inicial\n",
         "    # Deve-se perguntar se o vert_inicial pertence ao grafo G ou não\n",
         "    if vert_inicial not in G.get_vertices():\n",
         "    \n",
@@ -335,7 +331,8 @@
         "    \n",
         "    else:\n",
         "        edges = [vert_inicial]\n",
-        "        # pp_recursiva é responsavel por percorrer o grafo G e salvar os vertices percorridos em edges\n",
+        "        # pp_recursiva é responsavel por percorrer o grafo G e salvar\n",
+        "        # os vertices percorridos em edges\n",
         "        pp_recursiva(G, edges, edges)\n",
         "        \n",
         "        return edges"
@@ -360,15 +357,19 @@
       "source": [
         "def pp_recursiva(G, edges_atual, edges):\n",
         "\n",
-        "    # edges_atual[-1] é o ultimo elemento da lista edges_atual, o qual é o vertice em que estamos atualmente.\n",
-        "    # vert_adj percorre uma lista dos vertices adjacentes do vertice em que estamos atualmente\n",
+        "    # edges_atual[-1] é o ultimo elemento da lista edges_atual, o qual\n",
+        "    # é o vertice em que estamos atualmente.\n",
+        "    # vert_adj percorre uma lista dos vertices adjacentes\n",
+        "    # do vertice em que estamos atualmente\n",
         "    for vert_adj in G.listaAdj[edges_atual[-1]]:\n",
         "\n",
-        "        # para evitar um ciclo, deve-se fazer a pergunta : já passamos por esse vertice adjacente ?\n",
+        "        # para evitar um ciclo, deve-se fazer a pergunta:\n",
+        "        # já passamos por esse vertice adjacente?\n",
         "        if vert_adj not in edges:\n",
         "\n",
-        "            #caso não tenha passado por esse vertice devemos adicionar esse vertice em edges\n",
-        "            # e continuar o percurso em profundidade a aprtir do vertice adjacente escolhido\n",
+        "            # caso não tenha passado por esse vertice devemos\n",
+        "            # adicionar esse vertice em edges e continuar o percurso em\n",
+        "            # profundidade a partir do vertice adjacente escolhido\n",
         "            edges.append(vert_adj)\n",
         "            pp_recursiva(G, edges_atual + [vert_adj], edges)\n"
       ],
@@ -527,7 +528,7 @@
         "def BFS(G,v):\n",
         "\n",
         "    # Declaração\n",
-        "    u_visited = {}  # Dicionário de coloração do grafo (trocado - pois sem visuais)\n",
+        "    u_visited = {}  # Dict de col do grafo (alterado para \"visitado\")\n",
         "    v_dist = {} # Dicionário das distâncias dos u até v\n",
         "    u_pai = {} #Dicionário dos pais de u\n",
         "    Q = []\n",
@@ -537,9 +538,9 @@
         "    \n",
         "    # Inicialização\n",
         "    for u in v_list:\n",
-        "        u_visited[u] = \"no\" # Declarando tods os vertices como não-visitados\n",
+        "        u_visited[u] = \"no\" # Declarando todos vert como não-visitados\n",
         "        v_dist[u] = None # Vertices u a uma distancia infinita de v\n",
-        "                        #None pois o valor numérico de inf não importa\n",
+        "                        # None - o valor numérico de inf não importa\n",
         "        u_pai[u] = None # Todos sem pai\n",
         "    \n",
         "    u_visited[v] = \"next\" # Marcando como o próximo em análise\n",
@@ -554,8 +555,8 @@
         "    while Q != []:\n",
         "        \n",
         "        u = Q.pop()\n",
-        "        u_adj = G.get_adjacentes(u) # lista de Vertices x adjacentes a u\n",
-        "        percurso.insert(len(percurso), u) #Inserir o valor de u no percurso\n",
+        "        u_adj = G.get_adjacentes(u) # lista de Vertices x adj a u\n",
+        "        percurso.insert(len(percurso), u) #Inserir valor de u no percurso\n",
         "\n",
         "        # Marcação dos próx (x)/ aumento na dist de x /\n",
         "        # adição dos pais de x como u / Sendo x os adjacesntes de u\n",
@@ -701,7 +702,7 @@
         "    def get_pesosAdjacentes(self, chave):\n",
         "        return list(self.vertices[chave].values())"
       ],
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -727,10 +728,12 @@
         "    if vert_inicial not in vertices:\n",
         "      return False\n",
         "\n",
-        "    # edges é uma lista com as arestas que fazem parte da arvore espalhada minima\n",
+        "    # edges é uma lista com as arestas que fazem parte da\n",
+        "    #arvore espalhada minima\n",
         "    edges = []\n",
         "\n",
-        "    #vert_visitados é uma lista que salva os vertices que fazem parte da arevore espalhada minima.\n",
+        "    # vert_visitados é uma lista que salva os vertices que fazem\n",
+        "    # parte da arevore espalhada minima.\n",
         "    vert_visitados = [vert_inicial]\n",
         "    \n",
         "    # enquanto não visitar todos os vertices de G\n",
@@ -739,10 +742,12 @@
         "        # pegar as possiveis arestas que podem ser adicionadas a edges\n",
         "        aresta = arestas_possiveis(G, vert_visitados)\n",
         "\n",
-        "        # achar qual é o menor peso das arestas que podem ser adicionadas a edges\n",
+        "        # achar qual é o menor peso das arestas que podem ser\n",
+        "        # adicionadas a edges\n",
         "        peso_min = min(list(aresta.keys()))\n",
         "\n",
-        "        # a aresta a ser adicionada a edges é a primeira aresta que que possue o peso igual a peso_min\n",
+        "        # a aresta a ser adicionada a edges é a primeira aresta\n",
+        "        # que que possui o peso igual a peso_min\n",
         "        aresta_min = aresta[peso_min][0]\n",
         "        edges.append(aresta_min)\n",
         "\n",
@@ -751,7 +756,7 @@
         "\n",
         "    return edges"
       ],
-      "execution_count": null,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -773,18 +778,20 @@
         "    # ap é o dicionario retornado por arestas_possiveis\n",
         "    ap = {}\n",
         "\n",
-        "    # sendo vert um dos vertices que fazem parte da arvore espalhada minima\n",
+        "    # sendo vert um dos vertices que fazem parte da arvore espalhada mín\n",
         "    for vert in vert_visitados:\n",
         "\n",
         "        # para os vertices adjacentes de vert\n",
         "        for adj in G.get_adjacentes(vert):\n",
         "\n",
-        "            # se esse vertice adjacente já não faz parte da arvore espalhada minima\n",
+        "            # se esse vertice adjacente já não faz parte da\n",
+        "            # arvore espalhada minima\n",
         "            if adj not in vert_visitados:\n",
         "                # calcular peso da aresta (vert, adj)\n",
         "                peso = G.vertices[vert][adj]\n",
         "\n",
-        "                # se não existe nenhuma aresta registrada em ap que contem esse peso,\n",
+        "                # se não existe nenhuma aresta registrada em ap \n",
+        "                # que contem esse peso,\n",
         "                # adicionar esse peso como chave de ap\n",
         "                if peso not in list(ap.keys()):\n",
         "                    ap[peso] = []\n",
@@ -793,7 +800,7 @@
         "                ap[peso].append([vert, adj])\n",
         "    return ap\n"
       ],
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -809,7 +816,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "12WFJOmP62IE",
-        "outputId": "d197e01a-1779-4fa0-fa43-496a9c64d5ed",
+        "outputId": "bad99a2f-400f-48d8-85e7-b1e0a26ff9cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -835,22 +842,25 @@
         "\n",
         "v = 3\n",
         "print(\"Para o vertice inicial igual a\", v)\n",
-        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\", prim(G, v))\n",
+        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\"\n",
+        "        , prim(G, v))\n",
         "print(\"\\n\")\n",
         "\n",
         "v = 0\n",
         "print(\"Para o vertice inicial igual a\", v)\n",
-        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\", prim(G, v))\n",
+        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\"\n",
+        "        , prim(G, v))\n",
         "print(\"\\n\")\n",
         "\n",
         "v = 8\n",
         "print(\"Para o vertice inicial igual a\", v)\n",
-        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\", prim(G, v))\n",
+        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\"\n",
+        "        , prim(G, v))\n",
         "print(\"\\n\")\n",
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +990,8 @@
         "        \n",
         "        Q.remove(u)\n",
         "        u_adj = G.get_adjacentes(u) # Vertices v adjacentes a u\n",
-        "        u_pesos = dict(zip(u_adj, G.get_pesosAdjacentes(u))) # Pesos dos vertices v\n",
+        "        # Pesos dos vertices v\n",
+        "        u_pesos = dict(zip(u_adj, G.get_pesosAdjacentes(u))) \n",
         "\n",
         "        # Ralaxamento de (u, v, u_pesos)\n",
         "        for v in u_adj:\n",
@@ -988,7 +999,7 @@
         "                r_dist[v] = r_dist[u] + u_pesos[v]\n",
         "                r_pai[v] = u\n",
         "\n",
-        "                \n",
+        "\n",
         "    return r_pai, r_dist"
       ],
       "execution_count": 106,
@@ -1013,18 +1024,23 @@
       "source": [
         "# Algoritmo Menor Caminho\n",
         "def menorC(G,r,s):\n",
-        "    pai, dist = dij(G, r) # Chamar dijkstra para obter os pais e dists a partir de r\n",
+        "    # Chamar dijkstra para obter os pais e dists a partir de r\n",
+        "    pai, dist = dij(G, r) \n",
         "    caminho = [] # Inicializar o caminho como r\n",
         "\n",
         "    s_dist = dist[s] # Guardar a dist de s até r\n",
         "    j = pai[s] # Guardar o pai de s (para começar a lista dos caminhos)\n",
         "\n",
-        "    if r == s: # Se ambos forem iguais, o caminho é apenas ele mesmo.\n",
+        "    # Se ambos forem iguais, o caminho é apenas ele mesmo.\n",
+        "    if r == s:\n",
         "        return [s], s_dist\n",
-        "    if j == None: # Se j == None, j não tem pai, e, portanto, não há um caminho de r até ele\n",
+        "\n",
+        "    # Se j == None, j não tem pai, e não há um caminho de r até ele\n",
+        "    if j == None:\n",
         "            return [], s_dist\n",
         "    \n",
-        "    # Inserção dos nós ao caminho. Feita de trás para a frente, inserindo os pais no começo\n",
+        "    # Inserção dos nós ao caminho. Feita de trás para a frente,\n",
+        "    # inserindo os pais no começo\n",
         "    caminho.insert(0,s)\n",
         "    while j != r:\n",
         "        caminho.insert(0,j)\n",
