--- a/trabGrafos_gustavo_mateus_final.ipynb
+++ b/trabGrafos_gustavo_mateus_final.ipynb
@@ -504,7 +504,7 @@
         "        for x in self.listaAdj.items():\n",
         "            print(x)"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
         "    def get_pesosAdjacentes(self, chave):\n",
         "        return list(self.vertices[chave].values())"
       ],
-      "execution_count": 110,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -756,7 +756,7 @@
         "\n",
         "    return edges"
       ],
-      "execution_count": 111,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -800,7 +800,7 @@
         "                ap[peso].append([vert, adj])\n",
         "    return ap\n"
       ],
-      "execution_count": 112,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -816,9 +816,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "12WFJOmP62IE",
-        "outputId": "bad99a2f-400f-48d8-85e7-b1e0a26ff9cd",
+        "outputId": "9f77a384-48e2-4428-c1cc-e0f6e006b7ae",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
       "source": [
@@ -842,39 +843,42 @@
         "\n",
         "v = 3\n",
         "print(\"Para o vertice inicial igual a\", v)\n",
-        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\"\n",
+        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\\n\\t\"\n",
         "        , prim(G, v))\n",
         "print(\"\\n\")\n",
         "\n",
         "v = 0\n",
         "print(\"Para o vertice inicial igual a\", v)\n",
-        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\"\n",
+        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\\n\\t\"\n",
         "        , prim(G, v))\n",
         "print(\"\\n\")\n",
         "\n",
         "v = 8\n",
         "print(\"Para o vertice inicial igual a\", v)\n",
-        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\"\n",
+        "print(\"Os vertices que pertencem a árvore espalhada mínima de prim são:\\n\\t\"\n",
         "        , prim(G, v))\n",
         "print(\"\\n\")\n",
         "\n",
         "\n"
       ],
-      "execution_count": 113,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Para o vertice inicial igual a 3\n",
-            "Os vertices que pertencem a árvore espalhada mínima de prim são: [[3, 7], [7, 6], [3, 0], [0, 5], [3, 4], [4, 2], [5, 1]]\n",
+            "Os vertices que pertencem a árvore espalhada mínima de prim são:\n",
+            "\t [[3, 7], [7, 6], [3, 0], [0, 5], [3, 4], [4, 2], [5, 1]]\n",
             "\n",
             "\n",
             "Para o vertice inicial igual a 0\n",
-            "Os vertices que pertencem a árvore espalhada mínima de prim são: [[0, 5], [0, 3], [3, 7], [7, 6], [3, 4], [4, 2], [5, 1]]\n",
+            "Os vertices que pertencem a árvore espalhada mínima de prim são:\n",
+            "\t [[0, 5], [0, 3], [3, 7], [7, 6], [3, 4], [4, 2], [5, 1]]\n",
             "\n",
             "\n",
             "Para o vertice inicial igual a 8\n",
-            "Os vertices que pertencem a árvore espalhada mínima de prim são: False\n",
+            "Os vertices que pertencem a árvore espalhada mínima de prim são:\n",
+            "\t False\n",
             "\n",
             "\n"
           ],
@@ -942,7 +946,7 @@
         "    def get_pesosAdjacentes(self, chave):\n",
         "        return (list(self.vertices[chave].values()))"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1002,7 +1006,7 @@
         "\n",
         "    return r_pai, r_dist"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1050,7 +1054,7 @@
         "\n",
         "    return caminho, s_dist"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1068,8 +1072,7 @@
         "id": "ABTjV2ugbXhK",
         "outputId": "367b3167-c0c1-4131-c14c-f919b018c190",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -1123,7 +1126,7 @@
         "print(\"Dist: \" +  str(d))\n",
         "print(\"\\n\")"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
